tests/ui/diagnostic-not-implemented-from-bytes.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-from-bytes.rs:16:24
   |
16 |     takes_from_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_from_bytes`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/diagnostic-not-implemented-from-bytes.rs:19:24
   |
19 | fn takes_from_bytes<T: FromBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_bytes`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
